--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/mongoose": "^6.4.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/swagger": "^4.5.1",
     "@nestjs/typeorm": "^7.0.0",
+    "fastify-swagger": "^2.5.1",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
+    "swagger-ui-express": "^4.1.4",
     "typeorm": "^0.2.24"
   },
   "devDependencies": {
