--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "postinstall": "npm run prestart:prod",
+    "postinstall": "npm run start:prod",
     "start:dist": "node dist/main.js"
   },
   "dependencies": {
