--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.5.1",
     "@nestjs/typeorm": "^7.0.0",
+    "dotenv": "^8.2.0",
     "fastify-swagger": "^2.5.1",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.7",
